# nexus-protocol

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  LORA_OVERHAUL.md  PLAN.md  README.md  SECURITY_AUDIT.md  fixes.md
.github/workflows/: ci.yml  release.yml
android/: build.gradle  gradle.properties  gradlew  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  nexus_jni.cpp
android/app/src/main/java/com/nexus/mesh/ble/: BleTransport.kt
android/app/src/main/java/com/nexus/mesh/call/: PttMediaSessionManager.kt
android/app/src/main/java/com/nexus/mesh/data/: ContactDao.kt  ContactEntity.kt  ConversationDao.kt  ConversationEntity.kt  GroupDao.kt  GroupEntity.kt  GroupMemberEntity.kt  IdentityBackup.kt  IdentityRecord.kt  MessageDao.kt  MessageEntity.kt  MessageFts.kt  MessageRepository.kt  NexusDatabase.kt  PaperMessage.kt
android/app/src/main/java/com/nexus/mesh/flasher/: BleDfuFlasher.kt  EsptoolClient.kt  FirmwareCatalog.kt  FirmwareDownloader.kt  NexusDfuService.kt  UsbFlasher.kt
android/app/src/main/java/com/nexus/mesh/maps/: MbTilesManager.kt
android/app/src/main/java/com/nexus/mesh/nxm/: NxmBuilder.kt  NxmParser.kt  NxmTypes.kt  VoiceCallTypes.kt
android/app/src/main/java/com/nexus/mesh/service/: HotspotManager.kt  IdentityManager.kt  NexusNode.kt  NexusService.kt
android/app/src/main/java/com/nexus/mesh/ui/: AnnounceStreamScreen.kt  CallScreen.kt  ChatScreen.kt  ContactsScreen.kt  ConversationScreen.kt  DevicesScreen.kt  FlashNodeScreen.kt  GroupConversationScreen.kt  GroupInfoScreen.kt  IdentityListScreen.kt  LocationBubble.kt  MainActivity.kt  MapScreen.kt  MediaBubble.kt  MeshScreen.kt  OfflineMapScreen.kt  PaperMessageScreen.kt  QrScreen.kt  RouteInspectorScreen.kt  SearchScreen.kt  SettingsScreen.kt  TelemetryScreen.kt
android/app/src/main/java/com/nexus/mesh/updater/: SemVer.kt  UpdateChecker.kt  UpdateInstaller.kt  UpdateScheduler.kt  UpdateUi.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_mesh.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: file_paths.xml  usb_device_filter.xml
app/: CMakeLists.txt  nexusd.c  pillard.c
bindings/python/: cli.py
bindings/python/nexus/: __init__.py  _ffi.py  errors.py  identity.py  message.py  node.py  transport.py
bindings/python/tests/: test_group.py  test_identity.py  test_message.py  test_node.py  test_session.py
docs/: DEPLOYMENT.md  FEATURES.md  FIRMWARE_DEBUG.md  PROGRESS.md  PROTOCOL.md  index.html
docs/man/: nexus-cli.1  nexusd.8  pillard.8
firmware/common/: anchor_store.cpp  anchor_store.h  battery.cpp  battery.h  ble_bridge.cpp  ble_bridge.h  event_ring.cpp  event_ring.h  identity_store.cpp  identity_store.h  link_sources.py  radiolib_hal.cpp  radiolib_hal.h  session_store.cpp  session_store.h  settings_store.cpp  settings_store.h
firmware/heltec_v3/: platformio.ini
firmware/heltec_v3/src/: main.cpp
firmware/rak4631/: platformio.ini
firmware/rak4631/src/: main.cpp
firmware/xiao_esp32s3/: platformio.ini
firmware/xiao_esp32s3/src/: main.cpp
firmware/xiao_nrf52840/: platformio.ini
firmware/xiao_nrf52840/boards/: seeed_xiao_nrf52840.json
firmware/xiao_nrf52840/src/: main.cpp
firmware/xiao_nrf52840/variant/: nrf52840_s140_v7.ld  variant.cpp  variant.h
lib/: CMakeLists.txt
lib/include/nexus/: anchor.h  announce.h  ble_radio.h  crypto.h  fragment.h  group.h  halow.h  identity.h  lora_asf.h  lora_radio.h  message.h  msgring.h  node.h  packet.h  platform.h  route.h  session.h  transport.h  types.h
lib/src/: anchor.c  announce.c  crypto.c  fragment.c  group.c  identity.c  message.c  msgring.c  node.c  packet.c  route.c  session.c  transport.c
lib/src/platform/: platform_android.c  platform_esp32.c  platform_nrf52.c  platform_nrf52_arduino.c  platform_posix.c
lib/test/: CMakeLists.txt  test_anchor.c  test_announce.c  test_asf.c  test_ble.c  test_crypto.c  test_federation.c  test_fragment.c  test_gateway.c  test_group.c  test_halow.c  test_identity.c  test_lora.c  test_lora_bridge.c  test_message.c  test_msgring.c  test_packet.c  test_pillar_bridge.c  test_route.c  test_session.c  test_session_node.c  test_stress.c  test_stress_1k.c  test_tcp_inet.c  test_udp_mcast.c
lib/test/fuzz/: README.md  fuzz_announce.c  fuzz_message.c  fuzz_packet.c  fuzz_standalone.c
scripts/: README-pillar.md  install-pillar.sh  nexus-pillar.service
transports/ble/: nexus_ble.c
transports/lora/: nexus_lora.c  nexus_lora_asf.c
transports/pipe/: nexus_pipe.c
transports/serial/: nexus_serial.c
transports/tcp/: nexus_tcp.c  nexus_tcp_inet.c
transports/udp/: nexus_udp_multicast.c
transports/wifi/: nexus_halow.c
